ticket:13 - Fixed: widget work on IE browser

--- a/test_for_coffe_cups/media/base.css
+++ b/test_for_coffe_cups/media/base.css
@@ -29,7 +29,8 @@ div#header h1 {
 }
 
 div#content p {
-    line-height: 1.4
+    line-height: 1.4;
+    margin: 0px;
 }
 
 div#wrapper {
